Fixed issues where contact info label covers patient id label and changed edit link from button to link - RA-145
Fixed issues where contact info label covers patient id label and changed edit link from button to link - RA-145

--- a/omod/src/main/compass/sass/patientHeader.scss
+++ b/omod/src/main/compass/sass/patientHeader.scss
@@ -12,6 +12,7 @@ $green: #51A351;
   border-bottom: 2px solid #EEE;
   margin: -9px -9px 10px -9px;
   padding: 5px 10px;
+  min-height: 80px;
 
   .demographics {
     display: inline-block;
